kustomization/registry/registry-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: registry
  name: registry
spec:
  selector:
    app: registry
  ports:
    - port: 5000
